--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "path": "^0.12.7",
     "pg": "^8.12.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "zod": "^3.23.8"
   }
 }
